--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-cli": "^3.3.5"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "styled-components": "^4.3.2"
   }
 }
