--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "react-paypal-express-checkout": "^1.0.5",
     "styled-components": "^4.3.2"
   }
 }
